--- a/index.html
+++ b/index.html
@@ -1,1 +1,59 @@
-<h1>hello</h1>
+<!DOCTYPE html>
+<html lang="sv">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Min första hemsida</title>
+    <style>
+        h1 {
+            color: yellow;
+            background-color: green;
+
+        }
+
+        main {
+            max-width: 20rem;
+            margin-inline: auto;
+
+        }
+
+        img {
+            max-width: 100%;
+        }
+    </style>
+
+</head>
+
+<body>
+    <style>
+
+
+
+    </style>
+    <main>
+
+        <h1>Välkommen till min hemsida!</h1>
+        <p>Den är skriven med HTML och använder element.</p>
+        <p>HTML skriver vi med taggar som represneterar element </p>
+        <ul>
+            <li>h element är rubriker </li>
+            <li>p element är paragrafer</li>
+            <li>ul element unordered list </li>
+            <img src="Skärmbild 2025-08-25 120956.png" alt="">
+            <p>han här är jävligt stilig</p>
+            <ul>
+
+
+
+                <p>Mitt goofhy ahh cs2 inventory:</p>
+            <a href="https://steamcommunity.com/profiles/76561199019046880/inventory/">
+                olaconny's episka inventory
+            </a>
+
+
+
+            </main>
+</body>
+
+</html>
